Fixed z-index for profile menu

--- a/client/src/components/App/Header.css
+++ b/client/src/components/App/Header.css
@@ -112,6 +112,7 @@
   top: 100%;
   right: 0;
   margin-top: 5px;
+  z-index: 10;
 }
 
 .header__profile-nav-wrapper:before {
